# Jumpworx

./: .gitignore  README.md  pyproject.toml  run_batch.sh
.github/workflows/: test.yml
docs/audit/: REPO_AUDIT.md
docs/ml/: PIPELINE.md
experiments/: overlay_tips.py  pose_compare.py  timebase.py  viz_2d.py  viz_trick_3d.py  viz_trick_video.py
jwcore/: __init__.py  coach.py  coaching_thresholds.py  compare_metrics.py  dataset_from_features.py  feature_deltas.py  feedback_generator.py  io_cache.py  joints.py  jumpworx_retrain.py  normalize.py  phase_detect.py  phase_segmentation.py  pose_extract.py  pose_utils.py  posetrack_io.py  pro_index.py  pro_utils.py  trick_classifier.py
models/: jumpworx_model.joblib  trick_model_zonly.pkl
scripts/: _label_utils.py  build_features_for_csv.py  build_frame_table.py  compare_posetracks_plus.py  demo_cli.py  extract_keypoints.py  generate_coaching.py  measure_compare.py  pick_and_compare.py  predict_new.py  run_airtime_on_video.py  runner.py  train_trick_model.py  train_zonly.py  viz_compare_side_by_side.py
tests/: conftest.py  test_coach.py  test_coaching_thresholds.py  test_compare_metrics.py  test_core_modules.py  test_feedback_generator.py  test_phase.py  test_phase_detect.py  test_pose_extract.py  test_pose_utils.py  test_safety_harness.py  test_train_to_inference.py  test_trick_classifier.py
tools/: audit_cache_fps.py  eval_from_labels.py  generate_report_md.py  inspect_compare_metrics.py  inspect_npz.py  jumpworx_evaluate.py  plot_confusion_matrix.py  rule_baseline.py
